[gd_scene load_steps=33 format=3 uid="uid://4el3kq51boe8"]

[ext_resource type="Script" path="res://bathtub_level/bathtub_level.gd" id="1_bujv1"]
[ext_resource type="Shader" path="res://environment/water/water.gdshader" id="1_gudu6"]
[ext_resource type="Texture2D" uid="uid://ssrlnj65d4bs" path="res://environment/water/textures/caustic_texture.png" id="2_woun1"]
[ext_resource type="PackedScene" uid="uid://rij5ucplv7na" path="res://seche_cheveux/seche_cheveux.tscn" id="3_ji4pn"]
[ext_resource type="PackedScene" uid="uid://cpsw08ate1kf0" path="res://assets/FLOTTE.glb" id="3_qnajh"]
[ext_resource type="PackedScene" uid="uid://byejtqwx88kyu" path="res://scenes/bubble.tscn" id="4_1iwhq"]
[ext_resource type="Script" path="res://bathtub_level/hud.gd" id="4_f7kia"]
[ext_resource type="Texture2D" uid="uid://d2mghrpwtd852" path="res://environment/sol/floor_Tiles029_4K_Color.jpg" id="4_vyspa"]
[ext_resource type="PackedScene" uid="uid://30y2gcn3thde" path="res://environment/baignoire/baignoire.tscn" id="5_2xuvl"]
[ext_resource type="PackedScene" uid="uid://b2i5bmbjailsa" path="res://item/duck.tscn" id="7_t2yrm"]
[ext_resource type="Script" path="res://scripts/debug_draw.gd" id="8_wqv0v"]
[ext_resource type="PackedScene" uid="uid://bvjeme52fg8uo" path="res://item/mascotte.tscn" id="9_gxufp"]
[ext_resource type="Script" path="res://bathtub_level/player_spawns.gd" id="11_mx223"]
[ext_resource type="PackedScene" uid="uid://lrgp7e2785v0" path="res://item/boat/boat.tscn" id="12_3c5sd"]
[ext_resource type="PackedScene" uid="uid://b0avrrpd4jumj" path="res://item/sponge/sponge.tscn" id="12_y0avd"]
[ext_resource type="PackedScene" uid="uid://d0ipl857ti0rb" path="res://scenes/debug/spawn_point.tscn" id="15_r07ij"]
[ext_resource type="PackedScene" uid="uid://da274p5nkffto" path="res://environment/bin.glb" id="17_eqea6"]
[ext_resource type="PackedScene" uid="uid://jecmxb77jehc" path="res://environment/carpet.glb" id="18_hs7mu"]
[ext_resource type="PackedScene" uid="uid://c6q6xv6xvweo6" path="res://environment/furniture.glb" id="19_j2k1o"]
[ext_resource type="PackedScene" uid="uid://otot7s0garmu" path="res://environment/toothbrush.glb" id="21_iadyx"]
[ext_resource type="Texture2D" uid="uid://kbfsh2t78o44" path="res://assets/xbox_stick_l.png" id="22_6vj23"]
[ext_resource type="PackedScene" uid="uid://bqfunexf8wtnk" path="res://environment/plant/plant.tscn" id="22_mn8di"]
[ext_resource type="Texture2D" uid="uid://d01clc8kv8mel" path="res://assets/xbox_rb_outline.png" id="23_j44pb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rsayj"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ajdol"]
sky_material = SubResource("ProceduralSkyMaterial_rsayj")

[sub_resource type="Environment" id="Environment_7x14t"]
background_mode = 2
sky = SubResource("Sky_ajdol")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Shader" id="Shader_abalk"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.3.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_burley, specular_schlick_ggx;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform float point_size : hint_range(0.1, 128.0, 0.1);

uniform float roughness : hint_range(0.0, 1.0);
uniform sampler2D texture_metallic : hint_default_white, filter_linear_mipmap, repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r, filter_linear_mipmap, repeat_enable;

uniform float specular : hint_range(0.0, 1.0, 0.01);
uniform float metallic : hint_range(0.0, 1.0, 0.01);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;

	float metallic_tex = dot(texture(texture_metallic, base_uv), metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	SPECULAR = specular;

	vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
	float roughness_tex = dot(texture(texture_roughness, base_uv), roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	vec2 centered_uv = (UV * 2.0 / uv1_scale.xy - vec2(1.0)) ;
	float gradient = smoothstep(1.0, 0.7, (length(centered_uv)));
	ALPHA = gradient;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gwahh"]
render_priority = 0
shader = SubResource("Shader_abalk")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(2, 2, 2)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("4_vyspa")

[sub_resource type="PlaneMesh" id="PlaneMesh_e2m5y"]
material = SubResource("ShaderMaterial_gwahh")
size = Vector2(10, 10)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h6l63"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_q7dij"]
seamless = true
noise = SubResource("FastNoiseLite_h6l63")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6uoci"]
render_priority = -1
shader = ExtResource("1_gudu6")
shader_parameter/water_color = Color(0.133333, 0.490196, 0.823529, 1)
shader_parameter/water_depth_color = Color(0.133333, 0.490196, 0.823529, 1)
shader_parameter/water_edge_distance = 0.02
shader_parameter/water_depth_distance = 8.0
shader_parameter/water_texture_scale = 4.0
shader_parameter/main_noise_sampler = SubResource("NoiseTexture2D_q7dij")
shader_parameter/caustic_sampler = ExtResource("2_woun1")

[node name="BathtubLevel" type="Node3D" node_paths=PackedStringArray("players_parent_node", "player_spawns", "items_parent_node", "seche_cheveux_parent_node")]
transform = Transform3D(1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 0, 0, 0)
script = ExtResource("1_bujv1")
seche_cheveux_min_respawn_time = 3.0
seche_cheveux_max_respawn_time = 5.0
players_parent_node = NodePath("Players")
player_spawns = NodePath("PlayerSpawns")
bubble_scene = ExtResource("4_1iwhq")
seche_cheveux_scene = ExtResource("3_ji4pn")
items_parent_node = NodePath("Items")
seche_cheveux_parent_node = NodePath("SecheCheveuxParents")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7x14t")

[node name="Sol" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_e2m5y")

[node name="Baignoire" parent="." instance=ExtResource("5_2xuvl")]

[node name="FLOTTE2" parent="." instance=ExtResource("3_qnajh")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.986655, 0)

[node name="FLOTTE" parent="FLOTTE2" index="0"]
transform = Transform3D(1.04346, 0, 0, 0, 1.04346, 0, 0, 0, 1.04346, 0, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_6uoci")

[node name="Players" type="Node3D" parent="."]

[node name="Items" type="Node3D" parent="."]

[node name="Duck" parent="Items" instance=ExtResource("7_t2yrm")]
transform = Transform3D(1.59832, 0, -1.20224, 0, 2, 0, 1.20224, 0, 1.59832, 0.505744, 0.943082, -0.0877335)

[node name="Duck4" parent="Items" instance=ExtResource("7_t2yrm")]
transform = Transform3D(1.5061, 0, 1.31594, 0, 2, 0, -1.31594, 0, 1.5061, -0.758376, 0.943082, 0.461483)

[node name="Duck5" parent="Items" instance=ExtResource("7_t2yrm")]
transform = Transform3D(-0.0464565, 0, 1.99946, 0, 2, 0, -1.99946, 0, -0.0464565, 0.97872, 0.943082, 0.522915)

[node name="Mascotte2" parent="Items" instance=ExtResource("9_gxufp")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -1.24784, 0.98794, -0.198456)

[node name="Mascotte3" parent="Items" instance=ExtResource("9_gxufp")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 1.18974, 0.98794, -0.276839)

[node name="Sponge" parent="Items" instance=ExtResource("12_y0avd")]
transform = Transform3D(1.85111, 0, 0.757233, 0, 2, 0, -0.757233, 0, 1.85111, -0.234467, 0.990481, -0.354929)

[node name="Sponge2" parent="Items" instance=ExtResource("12_y0avd")]
transform = Transform3D(1.85111, 0, 0.757233, 0, 2, 0, -0.757233, 0, 1.85111, 0.652931, 0.990481, -0.646171)

[node name="Boat" parent="Items" instance=ExtResource("12_3c5sd")]
transform = Transform3D(1.70665, 0, -1.04276, 0, 2, 0, 1.04276, 0, 1.70665, 0.176508, 0.979774, 0.139108)

[node name="Boat2" parent="Items" instance=ExtResource("12_3c5sd")]
transform = Transform3D(-1.54965, 0, -1.26436, 0, 2, 0, 1.26436, 0, -1.54965, -0.76973, 0.979775, -0.607885)

[node name="TargetCameraPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 7.45601e-08, 4.43755e-08, -6.72004e-08, 0.34202, 0.939693, 5.48863e-08, -0.939693, 0.34202, -2.87586e-08, 2.96306, 0.885402)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_f7kia")

[node name="CountdownLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -44.0
offset_right = 0.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64

[node name="Countdown" type="Timer" parent="HUD"]

[node name="debugDraw" type="Control" parent="." node_paths=PackedStringArray("debug_targets")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_wqv0v")
debug_targets = [null]
draw_flags = 3

[node name="PlayerSpawns" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.138078, 0)
script = ExtResource("11_mx223")
show_spawn_points = true

[node name="Spawn1" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08687, 1.17092, -0.708193)

[node name="Spawn2" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134068, 1.14444, -0.606494)

[node name="Spawn3" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4492, 1.14444, -0.606494)

[node name="Spawn4" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4492, 1.14444, 0.0766094)

[node name="Spawn5" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.30875, 1.14444, 0.574572)

[node name="Spawn6" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.414968, 1.14444, 0.574572)

[node name="Spawn7" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.434123, 1.14444, 0.574572)

[node name="Spawn8" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47474, 1.14444, 0.497963)

[node name="Spawn9" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.856446, 1.14444, -0.108531)

[node name="Spawn10" parent="PlayerSpawns" instance=ExtResource("15_r07ij")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.358468, 1.14444, 0.140451)

[node name="SecheCheveuxSpawns" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18634, 0)

[node name="Top" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, -1, 0, -1.3)

[node name="Top2" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, -0.5, 0, -1.3)

[node name="Top3" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, -1.38555e-14, 0, -1.3)

[node name="Top4" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0.5, 0, -1.3)

[node name="Top5" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 1, 0, -1.3)

[node name="Bottom" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-1, -2.62201e-08, -1.48702e-07, 0, 0.984808, -0.173648, 1.50996e-07, -0.173648, -0.984808, -1, 0, 1.3)

[node name="Bottom2" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-1, -2.62201e-08, -1.48702e-07, 0, 0.984808, -0.173648, 1.50996e-07, -0.173648, -0.984808, -0.5, 0, 1.3)

[node name="Bottom3" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-1, -2.62201e-08, -1.48702e-07, 0, 0.984808, -0.173648, 1.50996e-07, -0.173648, -0.984808, 1.38555e-14, 0, 1.3)

[node name="Bottom4" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-1, -2.62201e-08, -1.48702e-07, 0, 0.984808, -0.173648, 1.50996e-07, -0.173648, -0.984808, 0.5, 0, 1.3)

[node name="Bottom5" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-1, -2.62201e-08, -1.48702e-07, 0, 0.984808, -0.173648, 1.50996e-07, -0.173648, -0.984808, 1, 0, 1.3)

[node name="Right" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.5904e-09, -4.30473e-08, 2.3, 0, -0.5)

[node name="Right2" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.5904e-09, -4.30473e-08, 2.3, 0, -2.45136e-14)

[node name="Right3" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, -0.173648, -0.984808, 0, 0.984808, -0.173648, 1, -7.5904e-09, -4.30473e-08, 2.3, 0, 0.5)

[node name="Left" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, 0.173648, 0.984808, 0, 0.984808, -0.173648, -1, -7.5904e-09, -4.30473e-08, -2.3, 0, -0.5)

[node name="Left2" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, 0.173648, 0.984808, 0, 0.984808, -0.173648, -1, -7.5904e-09, -4.30473e-08, -2.3, 0, 2.45136e-14)

[node name="Left3" type="Marker3D" parent="SecheCheveuxSpawns"]
transform = Transform3D(-4.37114e-08, 0.173648, 0.984808, 0, 0.984808, -0.173648, -1, -7.5904e-09, -4.30473e-08, -2.3, 0, 0.5)

[node name="SecheCheveuxRespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Environment" type="Node3D" parent="."]

[node name="bin" parent="Environment" instance=ExtResource("17_eqea6")]
transform = Transform3D(0.571578, 0, 1.91659, 0, 2, 0, -1.91659, 0, 0.571578, 4.40173, 0.0105708, 0.621867)

[node name="carpet2" parent="Environment" instance=ExtResource("18_hs7mu")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.00623322, 0, -1.98223)

[node name="furniture" parent="Environment" instance=ExtResource("19_j2k1o")]
transform = Transform3D(1.53209, 0, 1.28558, 0, 2, 0, -1.28558, 0, 1.53209, 3.8, 0, 3.2)

[node name="toothbrush" parent="Environment" instance=ExtResource("21_iadyx")]
transform = Transform3D(-7.57104e-08, -1.73205, -1, 2, -8.74228e-08, -2.13162e-14, -4.37114e-08, -1, 1.73205, -0.667632, 0.0429983, -1.79495)

[node name="plant with animation2" parent="Environment" instance=ExtResource("22_mn8di")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88773, 1.19209e-07, -1.57828)

[node name="MarginContainer" type="MarginContainer" parent="."]
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="KeysVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MoveHBox" type="HBoxContainer" parent="MarginContainer/KeysVBox"]
layout_mode = 2

[node name="MoveTextureRect" type="TextureRect" parent="MarginContainer/KeysVBox/MoveHBox"]
layout_mode = 2
texture = ExtResource("22_6vj23")

[node name="MoveLabel" type="Label" parent="MarginContainer/KeysVBox/MoveHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Move"

[node name="DashHBox" type="HBoxContainer" parent="MarginContainer/KeysVBox"]
layout_mode = 2

[node name="DashTextureRect" type="TextureRect" parent="MarginContainer/KeysVBox/DashHBox"]
layout_mode = 2
texture = ExtResource("23_j44pb")

[node name="DashLabel" type="Label" parent="MarginContainer/KeysVBox/DashHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Dash"

[node name="SecheCheveuxParents" type="Node3D" parent="."]

[connection signal="timeout" from="HUD/Countdown" to="HUD" method="_on_countdown_timeout"]
[connection signal="timeout" from="SecheCheveuxRespawnTimer" to="." method="_on_seche_cheveux_respawn_timer_timeout"]

[editable path="FLOTTE2"]
